force-app/main/default/objects/PPF_Shipping_Information__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>PPF Shipping Informations</relationshipLabel>
    <relationshipName>PPF_Shipping_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>