force-app/main/default/objects/PPF_Shipping_Information__c/fields/Case_Papers_Received__c.field-meta.xml
<CustomField>
    <fullName>Case_Papers_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Papers Received</label>
    <type>Checkbox</type>
</CustomField>