force-app/main/default/objects/PPF_Shipping_Information__c/fields/Investigator__c.field-meta.xml
<CustomField>
    <fullName>Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PPF_Shipping_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>