force-app/main/default/objects/PPF_Shipping_Information__c/fields/QA_User__c.field-meta.xml
<CustomField>
    <fullName>QA_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PPF_Shipping_Informations_QA</relationshipName>
    <type>Lookup</type>
</CustomField>