force-app/main/default/objects/PPF_Shipping_Information__c/fields/Shipping_Staff_Credential_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Staff_Credential_ID_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Staff Credential/ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>